--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,6 @@ html {
     padding-bottom: 5px;
 }
 
-#footer-arrow {
-}
-
 #footer-arrow img {
     margin: 0;
     position: absolute;
@@ -125,7 +122,7 @@ html {
     max-width: calc(750px - 40px);
     min-width: 400px;
     position: absolute;
-    margin: 16px auto 0;
+    margin: 0 auto;
     text-align: center;
     font-size: 48px;
     cursor: pointer;
